show the user center UI, from main entry

--- a/maker/templates/base.html
+++ b/maker/templates/base.html
@@ -106,7 +106,7 @@
                           <div class="bm">
                             <div class="inner">
                               <div class="inner3">
-                                <div class="inner4"><a class="{% block nav_main_account %}{% endblock %}" href="">用户中心<br>User Center<span class="arrow">▼</span></a></div>
+                                <div class="inner4"><a href="/uc/personalcenter/" class="{% block nav_main_account %}{% endblock %}" href="">用户中心<br>User Center<span class="arrow">▼</span></a></div>
                               </div>
                             </div>
                           </div>
