--- a/maker/uc/templates/uc_left.html
+++ b/maker/uc/templates/uc_left.html
@@ -1,129 +1,144 @@
-  <div class="personal_left"> 
-   <div class="sidebar"> 
-    <div class="sidebar_header"></div> 
-    <div class="sidebar_nav"> 
-     <ul class="uls"> 
-      <li> 
-       <div class="uls_header text_name" text_name="仪表盘"> 
-        <!-- active  展开 --> 
-        <div class="newFeatures_z active" style="display:none;" id="planet"> 
-         <i></i> 
-         <span class="circle1"></span> 
-         <span class="circle2"></span> 
-         <span class="circle3"></span> 
-         <span class="circle4"></span> 
-         <span class="circle5"></span> 
-        </div> 
-        <span class="left"></span> 
-        <span class="center mini_hide">仪表盘</span> 
+<div class="personal_left"> 
+       <div class="sidebar"> 
+              <div class="sidebar_header"></div> 
+              <div class="sidebar_nav"> 
+               <ul class="uls"> 
+                    <li> 
+                           <div class="uls_header text_name" text_name="我的机器人"> 
+                            <!-- active  展开 --> 
+                            <div class="newFeatures_z active" style="display:none;" id="planet"> 
+                             <i></i> 
+                             <span class="circle1"></span> 
+                             <span class="circle2"></span> 
+                             <span class="circle3"></span> 
+                             <span class="circle4"></span> 
+                             <span class="circle5"></span> 
+                            </div> 
+                            <span class="left"></span> 
+                            <span class="center mini_hide">我的机器人</span> 
+                           </div> 
+                           <ul class="lis"> 
+                                  <!-- <li id="l_01" class="active" num="1"> <a class="text_name" href="javascript:void(0)" text_name="数据概览"> <em data_href="/web/data_overview!index.action?cur=l_01" class="aClick"></em> 
+                                      <div class="icon"> 
+                                              <span><img src="/static/tuling123/img/icon70.png" /></span> 
+                                      </div> <span class="name mini_hide">数据概览</span> </a> 
+                                  </li>  -->
+                                  <li id="l_01" num="21"> <a class="text_name" href="javascript:void(0)" text_name="机器人创建"> <em data_href="{% url 'create_bot' %}" class="aClick"></em> 
+                                        <div class="icon"> 
+                                              <span><img src="/static/tuling123/img/icon71.png" /></span> 
+                                        </div> <span class="name mini_hide">机器人创建</span> </a>
+                                 </li> 
+                                  <li id="l_02" num="3"> <a class="text_name" href="javascript:void(0)" text_name="语料库自定义"> <em data_href="{% url 'corpus_def' %}" class="aClick"></em> 
+                                        <div class="icon"> 
+                                              <span><img src="/static/tuling123/img/icon72.png" /></span> 
+                                        </div> <span class="name mini_hide">语料库自定义</span> </a> 
+                                 </li> 
+                                  <li id="l_03" num="4"> <a class="text_name" href="javascript:void(0)" text_name="功能配置"> <em data_href="{% url 'func_config' %}" class="aClick"></em> 
+                                        <div class="icon"> 
+                                               <span><img src="/static/tuling123/img/icon73.png" /></span> 
+                                        </div> <span class="name mini_hide">功能配置</span> </a> 
+                                 </li> 
+                                  <li id="l_04" num="5"> <a class="text_name" href="javascript:void(0)" text_name="白名单管理"> <em data_href="{% url 'white_list' %}" class="aClick"></em> 
+                                        <div class="icon"> 
+                                              <span><img src="/static/tuling123/img/icon89.png" /></span> 
+                                        </div> <span class="name mini_hide">白名单管理</span> </a>
+                                  </li>
+                           </ul> 
+                     </li> 
+                    <!--<li> 
+                         <div class="uls_header text_name" text_name="高级拓展"> 
+                          <div class="newFeatures_z active" style="display:none;" id="super"> 
+                           <i></i> 
+                           <span class="circle1"></span> 
+                           <span class="circle2"></span> 
+                           <span class="circle3"></span> 
+                           <span class="circle4"></span> 
+                           <span class="circle5"></span> 
+                          </div> 
+                          <span class="left"></span> 
+                          <span class="center mini_hide">高级拓展</span> 
+                         </div> 
+                         <ul class="lis"> 
+                          <li id="l_07" num="71"> <a class="text_name" href="javascript:void(0)" text_name="拓展商城"> <em data_href="/web/assist_user_appid!index.action?cur=l_07" class="aClick"></em> 
+                            <div class="icon"> 
+                             <span><img src="/static/tuling123/img/icon76.png" /></span> 
+                            </div> <span class="name mini_hide">拓展商城</span> </a> </li> 
+                         </ul>
+                      </li>  -->
+                    <li>
+                           <div class="uls_header text_name" text_name="用户中心"> 
+                                <div class="newFeatures_z active" style="display:none;" id="user"> 
+                                       <i></i> 
+                                       <span class="circle1"></span> 
+                                       <span class="circle2"></span> 
+                                       <span class="circle3"></span> 
+                                       <span class="circle4"></span> 
+                                       <span class="circle5"></span> 
+                                </div> 
+                                <span class="left"></span> 
+                                <span class="center mini_hide">用户中心</span> 
+                           </div> 
+                           <ul class="lis"> 
+                                <li id="l_05" num="8"> <a href="javascript:void(0)" text_name="基本资料"> <em data_href="{% url 'basic_info' %}" class="aClick"></em> 
+                                      <div class="icon"> 
+                                            <span><img src="/static/tuling123/img/icon77.png" /></span> 
+                                      </div> <span class="name mini_hide">基本资料</span> </a> 
+                                </li> 
+                                <!-- <li id="l_09" num="9"> <a class="text_name" href="javascript:void(0)" text_name="安全设置"> <em data_href="/web/member_center!security.action?cur=l_09" class="aClick"></em> 
+                                       <div class="icon"> 
+                                            <span><img src="/static/tuling123/img/icon78.png" /></span> 
+                                      </div> <span class="name mini_hide">安全设置</span> </a> 
+                                </li> 
+                                <li id="l_10" num="10"> <a class="text_name" href="javascript:void(0)" text_name="实名认证"> <em data_href="/web/certificate!index.action?cur=l_10" class="aClick"></em> 
+                                      <div class="icon"> 
+                                          <span><img src="/static/tuling123/img/icon79.png" /></span> 
+                                      </div> <span class="name mini_hide">实名认证</span> </a> 
+                                </li> 
+                                <li id="l_12" num="11"> <a class="text_name" href="javascript:void(0)" text_name="我的订单"> <em data_href="/web/order!index.action?cur=l_12" class="aClick"></em> 
+                                      <div class="icon"> 
+                                            <span><img src="/static/tuling123/img/icon177.png" /></span> 
+                                      </div> <span class="name mini_hide">我的订单</span> </a> 
+                                </li>  -->
+                           </ul> 
+                    </li> 
+                    <li> 
+                           <div class="uls_header text_name" text_name="消息中心"> 
+                                  <div class="newFeatures_z active" style="display:none;" id="message"> 
+                                         <i></i> 
+                                         <span class="circle1"></span> 
+                                         <span class="circle2"></span> 
+                                         <span class="circle3"></span> 
+                                         <span class="circle4"></span> 
+                                         <span class="circle5"></span> 
+                                  </div> 
+                                  <span class="left"></span> 
+                                  <span class="center mini_hide">消息中心</span> 
+                           </div> 
+                           <ul class="lis"> 
+                                  <li id="l_06" num="12"> <a class="text_name" href="javascript:void(0)" text_name="系统公告"> <em data_href="{% url 'system_notify' %}" class="aClick"></em> 
+                                        <div class="icon"> 
+                                              <span><img src="/static/tuling123/img/icon196.png" /></span> 
+                                        </div> <span class="name mini_hide">系统公告</span> </a> 
+                                  </li> 
+                                  <li id="l_07" num="13"> <a class="text_name" href="javascript:void(0)" text_name="站内信"> <em data_href="{% url 'site_msg' %}" class="aClick"></em> 
+                                        <div class="icon"> 
+                                              <span><img src="/static/tuling123/img/icon182.png" style="position:relative;top:1px" /></span> 
+                                        </div> <span class="name mini_hide">站内信</span> <i></i> </a>
+                                  </li> 
+                                  <li id="l_08" num="8"> <a class="text_name" href="javascript:void(0)" text_name="产品动态"> <em data_href="{% url 'personalcenter' %}" class="aClick"></em> 
+                                          <div class="icon"> 
+                                                <span><img src="/static/tuling123/img/icon80.png" /></span> 
+                                          </div> <span class="name mini_hide">产品动态</span> </a>
+                                  </li>
+                           </ul>
+                     </li>
+               </ul>
+              </div> 
        </div> 
-       <ul class="lis"> 
-        <li id="l_01" class="active" num="1"> <a class="text_name" href="javascript:void(0)" text_name="数据概览"> <em data_href="/web/data_overview!index.action?cur=l_01" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon70.png" /></span> 
-          </div> <span class="name mini_hide">数据概览</span> </a> </li> 
-        <li id="l_02" num="21"> <a class="text_name" href="javascript:void(0)" text_name="机器人设定"> <em data_href="/web/robot_settings!index.action?cur=l_02" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon71.png" /></span> 
-          </div> <span class="name mini_hide">机器人设定</span> </a> </li> 
-        <li id="l_03" num="3"> <a class="text_name" href="javascript:void(0)" text_name="NLP知识库"> <em data_href="/web/knowledge!index.action?cur=l_03" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon72.png" /></span> 
-          </div> <span class="name mini_hide">NLP知识库</span> </a> </li> 
-        <li id="l_04" num="4"> <a class="text_name" href="javascript:void(0)" text_name="功能选择"> <em data_href="/web/assist_user_appid!list.action?cur=l_04" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon73.png" /></span> 
-          </div> <span class="name mini_hide">功能选择</span> </a> </li> 
-        <li id="l_05" num="5"> <a class="text_name" href="javascript:void(0)" text_name="机器人接入"> <em data_href="/web/robot_access!index.action?cur=l_05" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon89.png" /></span> 
-          </div> <span class="name mini_hide">机器人接入</span> </a> </li> 
-       </ul> </li> 
-      <li> 
-       <div class="uls_header text_name" text_name="高级拓展"> 
-        <div class="newFeatures_z active" style="display:none;" id="super"> 
-         <i></i> 
-         <span class="circle1"></span> 
-         <span class="circle2"></span> 
-         <span class="circle3"></span> 
-         <span class="circle4"></span> 
-         <span class="circle5"></span> 
-        </div> 
-        <span class="left"></span> 
-        <span class="center mini_hide">高级拓展</span> 
-        <!-- <span class="right mini_hide" id="bins_btn1"><a href="javascript:void(0)"><img src="/static/tuling123/img/icon74.png" /></a></span> --> 
-       </div> 
-       <ul class="lis"> 
-        <li id="l_07" num="71"> <a class="text_name" href="javascript:void(0)" text_name="拓展商城"> <em data_href="/web/assist_user_appid!index.action?cur=l_07" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon76.png" /></span> 
-          </div> <span class="name mini_hide">拓展商城</span> </a> </li> 
-       </ul> </li> 
-      <li> 
-       <div class="uls_header text_name" text_name="用户中心"> 
-        <div class="newFeatures_z active" style="display:none;" id="user"> 
-         <i></i> 
-         <span class="circle1"></span> 
-         <span class="circle2"></span> 
-         <span class="circle3"></span> 
-         <span class="circle4"></span> 
-         <span class="circle5"></span> 
-        </div> 
-        <span class="left"></span> 
-        <span class="center mini_hide">用户中心</span> 
-       </div> 
-       <ul class="lis"> 
-        <li id="l_08" num="8"> <a href="javascript:void(0)" text_name="基本资料"> <em data_href="/web/member_center!info.action?cur=l_08" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon77.png" /></span> 
-          </div> <span class="name mini_hide">基本资料</span> </a> </li> 
-        <li id="l_09" num="9"> <a class="text_name" href="javascript:void(0)" text_name="安全设置"> <em data_href="/web/member_center!security.action?cur=l_09" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon78.png" /></span> 
-          </div> <span class="name mini_hide">安全设置</span> </a> </li> 
-        <li id="l_10" num="10"> <a class="text_name" href="javascript:void(0)" text_name="实名认证"> <em data_href="/web/certificate!index.action?cur=l_10" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon79.png" /></span> 
-          </div> <span class="name mini_hide">实名认证</span> </a> </li> 
-        <li id="l_12" num="11"> <a class="text_name" href="javascript:void(0)" text_name="我的订单"> <em data_href="/web/order!index.action?cur=l_12" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon177.png" /></span> 
-          </div> <span class="name mini_hide">我的订单</span> </a> </li> 
-       </ul> </li> 
-      <li> 
-       <div class="uls_header text_name" text_name="消息中心"> 
-        <div class="newFeatures_z active" style="display:none;" id="message"> 
-         <i></i> 
-         <span class="circle1"></span> 
-         <span class="circle2"></span> 
-         <span class="circle3"></span> 
-         <span class="circle4"></span> 
-         <span class="circle5"></span> 
-        </div> 
-        <span class="left"></span> 
-        <span class="center mini_hide">消息中心</span> 
-       </div> 
-       <ul class="lis"> 
-        <li id="l_13" num="12"> <a class="text_name" href="javascript:void(0)" text_name="系统公告"> <em data_href="/web/announcement!list.action?cur=l_13" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon196.png" /></span> 
-          </div> <span class="name mini_hide">系统公告</span> </a> </li> 
-        <li id="l_14" num="13"> <a class="text_name" href="javascript:void(0)" text_name="站内信"> <em data_href="/web/instation_message!list.action?cur=l_14" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon182.png" style="position:relative;top:1px" /></span> 
-          </div> <span class="name mini_hide">站内信</span> <i></i> </a> </li> 
-        <li id="l_11" num="14"> <a class="text_name" href="javascript:void(0)" text_name="产品动态"> <em data_href="/web/product_dynamics!index.action?cur=l_11" class="aClick"></em> 
-          <div class="icon"> 
-           <span><img src="/static/tuling123/img/icon80.png" /></span> 
-          </div> <span class="name mini_hide">产品动态</span> </a> </li> 
-       </ul> </li> 
-     </ul> 
-    </div> 
-   </div> 
-   <div class="move_text"> 
-    <div class="move_text_bg"> 
-     <span></span> 
-    </div> 
-    <div class="text"></div> 
-   </div> 
-  </div> 
+       <div class="move_text"> 
+            <div class="move_text_bg"> 
+                  <span></span> 
+            </div> 
+            <div class="text"></div> 
+       </div>   
+</div> 
