--- a/maker/static/tuling123/css/left.css
+++ b/maker/static/tuling123/css/left.css
@@ -348,7 +348,7 @@
 	border: 0;
 }
 .personal_right .switch .switch-animate .left {
-	background: #ff9957;
+	background: #CAE1FF;
 	color: #fff;
 }
 .personal_right .switch .switch-animate .center {
