--- a/maker/uc/templates/uc_basic_info.html
+++ b/maker/uc/templates/uc_basic_info.html
@@ -7,7 +7,7 @@
 <meta />
 {% endblock %}
 
-{% block uc_title %}基本资料{% endblock %}
+{% block uc_title %}<span>基本资料</span>{% endblock %}
 {% block uc_content %}
 
 {% endblock %}
