--- a/maker/uc/templates/uc_corpus_def.html
+++ b/maker/uc/templates/uc_corpus_def.html
@@ -7,7 +7,7 @@
 <meta />
 {% endblock %}
 
-{% block uc_title %}语料库自定义{% endblock %}
+{% block uc_title %}<span>语料库自定义</span>{% endblock %}
 {% block uc_content %}
 
 {% endblock %}
