--- a/maker/uc/templates/uc_create_bot.html
+++ b/maker/uc/templates/uc_create_bot.html
@@ -7,7 +7,7 @@
 <meta />
 {% endblock %}
 
-{% block uc_title %}机器人创建{% endblock %}
+{% block uc_title %}<span>机器人创建</span>{% endblock %}
 {% block uc_content %}
 
 {% endblock %}
