--- a/maker/uc/templates/uc_home.html
+++ b/maker/uc/templates/uc_home.html
@@ -7,7 +7,7 @@
 <meta />
 {% endblock %}
 
-{% block uc_title %}产品动态{% endblock %}
+{% block uc_title %}<span>产品动态</span>{% endblock %}
 {% block uc_content %}
  <ul class="message" id="message_z"> 
      <li> 
