--- a/maker/uc/templates/uc_white_list.html
+++ b/maker/uc/templates/uc_white_list.html
@@ -7,7 +7,7 @@
 <meta />
 {% endblock %}
 
-{% block uc_title %}白名单管理{% endblock %}
+{% block uc_title %}<span>白名单管理</span>{% endblock %}
 {% block uc_content %}
 
 {% endblock %}
