--- a/maker/uc/templates/uc_site_msg.html
+++ b/maker/uc/templates/uc_site_msg.html
@@ -7,7 +7,7 @@
 <meta />
 {% endblock %}
 
-{% block uc_title %}站内信{% endblock %}
+{% block uc_title %}<span>站内信</span>{% endblock %}
 {% block uc_content %}
 
 {% endblock %}
