--- a/maker/uc/templates/uc_system_notify.html
+++ b/maker/uc/templates/uc_system_notify.html
@@ -7,7 +7,7 @@
 <meta />
 {% endblock %}
 
-{% block uc_title %}系统通知{% endblock %}
+{% block uc_title %}<span>系统通知</span>{% endblock %}
 {% block uc_content %}
 
 {% endblock %}
