--- a/maker/uc/templates/uc_left.html
+++ b/maker/uc/templates/uc_left.html
@@ -28,17 +28,22 @@
                                               <span><img src="/static/tuling123/img/icon71.png" /></span> 
                                         </div> <span class="name mini_hide">机器人创建</span> </a>
                                  </li> 
-                                  <li id="l_02" num="3"> <a class="text_name" href="javascript:void(0)" text_name="语料库自定义"> <em data_href="{% url 'corpus_def' %}" class="aClick"></em> 
+                                  <li id="l_02" num="21"> <a class="text_name" href="javascript:void(0)" text_name="机器人设定"> <em data_href="{% url 'set_bot' %}" class="aClick"></em> 
+                                        <div class="icon"> 
+                                              <span><img src="/static/tuling123/img/icon71.png" /></span> 
+                                        </div> <span class="name mini_hide">机器人设定</span> </a>
+                                 </li> 
+                                  <li id="l_03" num="3"> <a class="text_name" href="javascript:void(0)" text_name="语料库自定义"> <em data_href="{% url 'corpus_def' %}" class="aClick"></em> 
                                         <div class="icon"> 
                                               <span><img src="/static/tuling123/img/icon72.png" /></span> 
                                         </div> <span class="name mini_hide">语料库自定义</span> </a> 
                                  </li> 
-                                  <li id="l_03" num="4"> <a class="text_name" href="javascript:void(0)" text_name="功能配置"> <em data_href="{% url 'func_config' %}" class="aClick"></em> 
+                                  <li id="l_04" num="4"> <a class="text_name" href="javascript:void(0)" text_name="功能配置"> <em data_href="{% url 'func_config' %}" class="aClick"></em> 
                                         <div class="icon"> 
                                                <span><img src="/static/tuling123/img/icon73.png" /></span> 
                                         </div> <span class="name mini_hide">功能配置</span> </a> 
                                  </li> 
-                                  <li id="l_04" num="5"> <a class="text_name" href="javascript:void(0)" text_name="白名单管理"> <em data_href="{% url 'white_list' %}" class="aClick"></em> 
+                                  <li id="l_05" num="5"> <a class="text_name" href="javascript:void(0)" text_name="白名单管理"> <em data_href="{% url 'white_list' %}" class="aClick"></em> 
                                         <div class="icon"> 
                                               <span><img src="/static/tuling123/img/icon89.png" /></span> 
                                         </div> <span class="name mini_hide">白名单管理</span> </a>
@@ -79,7 +84,7 @@
                                 <span class="center mini_hide">用户中心</span> 
                            </div> 
                            <ul class="lis"> 
-                                <li id="l_05" num="8"> <a href="javascript:void(0)" text_name="基本资料"> <em data_href="{% url 'basic_info' %}" class="aClick"></em> 
+                                <li id="l_06" num="8"> <a href="javascript:void(0)" text_name="基本资料"> <em data_href="{% url 'basic_info' %}" class="aClick"></em> 
                                       <div class="icon"> 
                                             <span><img src="/static/tuling123/img/icon77.png" /></span> 
                                       </div> <span class="name mini_hide">基本资料</span> </a> 
@@ -115,17 +120,17 @@
                                   <span class="center mini_hide">消息中心</span> 
                            </div> 
                            <ul class="lis"> 
-                                  <li id="l_06" num="12"> <a class="text_name" href="javascript:void(0)" text_name="系统公告"> <em data_href="{% url 'system_notify' %}" class="aClick"></em> 
+                                  <li id="l_07" num="12"> <a class="text_name" href="javascript:void(0)" text_name="系统公告"> <em data_href="{% url 'system_notify' %}" class="aClick"></em> 
                                         <div class="icon"> 
                                               <span><img src="/static/tuling123/img/icon196.png" /></span> 
                                         </div> <span class="name mini_hide">系统公告</span> </a> 
                                   </li> 
-                                  <li id="l_07" num="13"> <a class="text_name" href="javascript:void(0)" text_name="站内信"> <em data_href="{% url 'site_msg' %}" class="aClick"></em> 
+                                  <li id="l_08" num="13"> <a class="text_name" href="javascript:void(0)" text_name="站内信"> <em data_href="{% url 'site_msg' %}" class="aClick"></em> 
                                         <div class="icon"> 
                                               <span><img src="/static/tuling123/img/icon182.png" style="position:relative;top:1px" /></span> 
                                         </div> <span class="name mini_hide">站内信</span> <i></i> </a>
                                   </li> 
-                                  <li id="l_08" num="8"> <a class="text_name" href="javascript:void(0)" text_name="产品动态"> <em data_href="{% url 'personalcenter' %}" class="aClick"></em> 
+                                  <li id="l_09" num="8"> <a class="text_name" href="javascript:void(0)" text_name="产品动态"> <em data_href="{% url 'personalcenter' %}" class="aClick"></em> 
                                           <div class="icon"> 
                                                 <span><img src="/static/tuling123/img/icon80.png" /></span> 
                                           </div> <span class="name mini_hide">产品动态</span> </a>
