draft phase of user center operation on robot

--- a/maker/uc/templates/uc_set_bot.html
+++ b/maker/uc/templates/uc_set_bot.html
@@ -26,7 +26,7 @@
                 <input type="file" name="fileTest" id="file"/>
             </form>
         </div>
-        <form id="updateset_form" action="/web/robot_settings!updateset.action?cur=l_02" method="post"
+        <form id="updateset_form" action="/uc/setbot/" method="post"
               enctype="multipart/form-data">
             <div class="robot_box1 row">
                 <div class="robot_box1_left">
